# spectral_binaries

./: .gitignore  Makefile  Malina's README  Malina.md  README.md  core.py  environment.yaml  pyproject.toml
data/: nn_decomp_model_apr18.h5  standards.h5  wavegrid.npy
notebooks/: Binaries Project Sample.ipynb  Binary_Decomposition.ipynb  camille_recent.ipynb  oversampling.ipynb  sample_curation.ipynb  testing.ipynb  tutorial.ipynb
spectral_binaries/: __init__.py  binary_decomposition.py  constants.py  core.py  feature_extraction.py  oversampling.py  train.py  visualization.py
summaries/: Camille.md
